LU-4810 utils: print message when set tunables

When set scheduler and max_sectors_kb on mount, messages should
be printed on console to notify user that these tunables are changed
by lustre.

Signed-off-by: Niu Yawei <yawei.niu@intel.com>
Change-Id: I6a3618b7e5eb0127e9aea18631397cd4dcbde546